Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/UnivMarks__c.object
<CustomObject>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnivStudent__c</fullName>
        <label>UnivStudent</label>
        <referenceTo>UnivStudent__c</referenceTo>
        <relationshipLabel>UnivMark</relationshipLabel>
        <relationshipName>UnivMark</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UnivMark</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAR-{000000}</displayFormat>
        <label>UnivMarks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UnivMark</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>